--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Core/Scripts/CardLogic/Slot/CardSlot.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Core/", "res://Core/Scripts/", "res://Core/Scripts/Managers/", "res://Core/Scripts/CardLogic/", "res://Core/Scripts/CardLogic/Slot/", "res://Core/Scenes/", "res://Core/Scenes/Cards/", "res://Core/Art/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Core/", "res://Core/Scripts/Managers/", "res://Core/Scripts/CardLogic/", "res://Core/Scripts/CardLogic/Slot/", "res://Core/Scenes/", "res://Core/Art/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Core/Scenes/GameScenes/Main.tscn", "res://Core/Scenes/Cards/card.tscn", "res://Core/Scenes/Cards/card_slot.tscn", "res://Core/Scenes/Cards/slot_mouse_manager.tscn")
-current_scene="res://Core/Scenes/GameScenes/Main.tscn"
+open_scenes=PackedStringArray("res://Core/Scenes/GameScenes/Main.tscn", "res://Core/Scenes/Cards/card.tscn", "res://Core/Scenes/Cards/card_slot.tscn", "res://Core/Scenes/Cards/slot_mouse_manager.tscn", "res://Core/Scenes/GameObjects/district.tscn")
+current_scene="res://Core/Scenes/GameObjects/district.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
@@ -39,12 +39,12 @@ selected_bottom_panel_item=0
 
 screen=1
 mode="maximized"
-position=Vector2i(0, 187)
+position=Vector2i(1920, 23)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Core/Scripts/GameObjects/District.cs"]
+selected_script="res://Core/Scripts/GameObjects/District.cs"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(698, 315, 1164, 695)
+floating_window_rect=Rect2i(2298, 151, 1164, 695)
 floating_window_screen=1
 
 [ShaderEditor]
