--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Core/Scenes/GameScenes/Market.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Core/Scenes/GameScenes/Main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Core/", "res://Core/Scripts/", "res://Core/Scripts/GameScenes/", "res://Core/Scripts/GameScenes/GameEvents/Events/", "res://Core/Scripts/DI/", "res://Core/Scripts/DI/Containers/", "res://Core/Scenes/", "res://Core/Scenes/GameScenes/", "res://Core/Scenes/Events/", "res://Core/Scenes/Events/Types/", "res://Core/Scenes/AllGameManagers/", "res://Core/Art/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Core/Scenes/GameScenes/EventsWindow.tscn", "res://Core/Scenes/Events/Types/GameEvent.tscn", "res://Core/Scenes/Events/Managers/EventsSpawner.tscn", "res://Core/Scenes/Events/choose_result_screen.tscn", "res://Core/Scenes/AllGameManagers/money_manager.tscn", "res://Core/Scenes/GameScenes/Main.tscn")
+open_scenes=PackedStringArray("res://Core/Scenes/GameScenes/EventsWindow.tscn", "res://Core/Scenes/Events/Types/GameEvent.tscn", "res://Core/Scenes/Events/Managers/EventsSpawner.tscn", "res://Core/Scenes/Events/choose_result_screen.tscn", "res://Core/Scenes/AllGameManagers/money_manager.tscn", "res://Core/Scenes/GameScenes/Main.tscn", "res://Core/Scenes/GameScenes/Market.tscn")
 current_scene="res://Core/Scenes/GameScenes/EventsWindow.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
@@ -37,9 +37,9 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(0, 187)
+position=Vector2i(0, 34)
 
 [ScriptEditor]
 
@@ -52,8 +52,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(698, 315, 1164, 695)
-floating_window_screen=1
+floating_window_rect=Rect2i(698, 399, 1164, 695)
+floating_window_screen=0
 
 [ShaderEditor]
 
